<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewNombre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre_ejemplo"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/textViewEspec2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Especificacion_ejemplo"
            />

        <TextView
            android:id="@+id/textViewCantidad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cantidad_ejemplo"
            />

        <TextView
            android:id="@+id/textViewPrecio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Precio_ejemplo"
            />
        <!-- Add more TextViews for displaying symptoms if needed -->
    </LinearLayout>
</ScrollView>